c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_struct_full_expr.c
struct s;

extern struct s x;

int main(void) {
  // can't use expression w/ incomplete struct type as expression statement
  for (x;;)
    ;
  return 0;
}